[package]
name = "bf"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
minidom = "0.13.0"
log = "0.4.14"
env_logger = "0.9.0"
eval = "0.4.3"
regex = "1.5.4"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
convert_case = "0.4"