[package]
name = "bf_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
minidom = "0.13.0"
log = "0.4.14"
env_logger = "0.9.0"
eval = "0.4.3"
regex = "1.5.4"

[build-dependencies]
bf_codegen = { path = "../bf_codegen" }
