[package]
name = "codegen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
convert_case = "0.4"
codegen = "0.1.3"

[dev-dependencies]
regex = "1.5"